--- a/app/views/forms/_form1099int.html.erb
+++ b/app/views/forms/_form1099int.html.erb
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
+
 <div class="row">
                           <div class="rel col-lg-12">
                              <div>
@@ -37,8 +39,8 @@ In 'City or town, state or province ...' field you should enter recipient's city
                                     
                                     <!-- fields -->
                                     <textarea required="true" class="abs" style="top: 9.5%;left: 1.5%;width: 44%;height: 20%;" name="payers_name_address"><%= @form_fields['payers_name_address']%></textarea>
-                                    <input required="true" class="abs" style="top: 33.8%;left: 1.5%;width: 22%;height: 6.8%;" name="payers_fin" value="<%= @form_fields['payers_fin']%>" type="text">
-                                    <input required="true" class="abs" name="recipients_id" value="<%= @form_fields['recipients_id']%>" style="top: 33.8%;left: 24%;width: 22%;height: 6.8%;" type="text">
+                                    <input required="true" class="abs" style="top: 33.8%;left: 1.5%;width: 22%;height: 6.8%;" name="payers_fin" value="<%= @form_fields['payers_fin']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the payer. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
+                                    <input required="true" class="abs" name="recipients_id" value="<%= @form_fields['recipients_id']%>" style="top: 33.8%;left: 24%;width: 22%;height: 6.8%;" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the recipient. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
                                     <input required="true" class="abs" name="recipients_name" value="<%= @form_fields['recipients_name']%>" style="top: 46%;left: 1.5%;width: 44.5%;height: 6.8%;" type="text">
                                     <input required="true" class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 56%;left: 1.5%;width: 44.5%;height: 6.8%;" type="text">
                                     <input required="true" class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 66%;left: 1.5%;width: 44.5%;height: 6.8%;" type="text">
@@ -56,24 +58,24 @@ In 'City or town, state or province ...' field you should enter recipient's city
 
 
                                     <input required="true" class="abs" name="payers_rtn" value="<%= @form_fields['payers_rtn']%>" style="top: 7.5%;left: 47%;width: 18%;height: 6%;" type="text">
-                                    <input required="true" class="abs" name="1" value="<%= @form_fields['1']%>" style="top: 17.5%;left: 48%;width: 16.5%;height: 6%;" type="text">
-                                    <input required="true" class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 26.5%;left: 48%;width: 35.5%;height: 7%;" type="text">
-                                    <input required="true" class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 36.5%;left: 48%;width: 35.5%;height: 6.7%;" type="text">
-                                    <input required="true" class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 46.5%;left: 48%;width: 16.5%;height: 3%;" type="text">
-                                    <input required="true" class="abs" name="5" value="<%= @form_fields['5']%>" style="top: 46.5%;left: 67%;width: 16.5%;height: 3%;" type="text">
-                                    <input required="true" class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 52.5%;left: 48%;width: 16.7%;height: 3.3%;" type="text">
+                                    <input required="true" class="abs" name="1" value="<%= @form_fields['1']%>" style="top: 17.5%;left: 48%;width: 16.5%;height: 6%;" type="number">
+                                    <input required="true" class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 26.5%;left: 48%;width: 35.5%;height: 7%;" type="number">
+                                    <input required="true" class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 36.5%;left: 48%;width: 35.5%;height: 6.7%;" type="number">
+                                    <input required="true" class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 46.5%;left: 48%;width: 16.5%;height: 3%;" type="number">
+                                    <input required="true" class="abs" name="5" value="<%= @form_fields['5']%>" style="top: 46.5%;left: 67%;width: 16.5%;height: 3%;" type="number">
+                                    <input required="true" class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 52.5%;left: 48%;width: 16.7%;height: 3.3%;" type="number">
                                     <input required="true" class="abs" name="7" value="<%= @form_fields['7']%>" style="top: 52.5%;left: 66%;width: 17.3%;height: 3.4%;" type="text">
-                                    <input required="true" class="abs" name="8" value="<%= @form_fields['8']%>" style="top: 59.5%;left: 48%;width: 16.7%;height: 6.4%;" type="text">
-                                    <input required="true" class="abs" name="9" value="<%= @form_fields['9']%>" style="top: 59.5%;left: 67%;width: 16.7%;height: 6.4%;" type="text">
-                                    <input required="true" class="abs" name="10" value="<%= @form_fields['10']%>" style="top: 69.5%;left: 48%;width: 16.7%;height: 6.4%;" type="text">
-                                    <input required="true" class="abs" name="11" value="<%= @form_fields['11']%>" style="top: 69.5%;left: 66.7%;width: 16.7%;height: 6.4%;" type="text">
-                                    <input required="true" class="abs" name="12" value="<%= @form_fields['12']%>" style="top: 79%;left: 48%;width: 16.7%;height: 3.5%;" type="text">
-                                    <input required="true" class="abs" name="13" value="<%= @form_fields['13']%>" style="top: 79%;left: 66.6%;width: 16.7%;height: 3.5%;" type="text">
+                                    <input required="true" class="abs" name="8" value="<%= @form_fields['8']%>" style="top: 59.5%;left: 48%;width: 16.7%;height: 6.4%;" type="number">
+                                    <input required="true" class="abs" name="9" value="<%= @form_fields['9']%>" style="top: 59.5%;left: 67%;width: 16.7%;height: 6.4%;" type="number">
+                                    <input required="true" class="abs" name="10" value="<%= @form_fields['10']%>" style="top: 69.5%;left: 48%;width: 16.7%;height: 6.4%;" type="number">
+                                    <input required="true" class="abs" name="11" value="<%= @form_fields['11']%>" style="top: 69.5%;left: 66.7%;width: 16.7%;height: 6.4%;" type="number">
+                                    <input required="true" class="abs" name="12" value="<%= @form_fields['12']%>" style="top: 79%;left: 48%;width: 16.7%;height: 3.5%;" type="number">
+                                    <input required="true" class="abs" name="13" value="<%= @form_fields['13']%>" style="top: 79%;left: 66.6%;width: 16.7%;height: 3.5%;" type="number">
                                     <input required="true" class="abs" name="14" value="<%= @form_fields['14']%>" style="top: 87.5%;left: 47%;width: 17.7%;height: 4.2%;" type="text">
                                     <input required="true" class="abs" name="15" value="<%= @form_fields['15']%>" style="top: 85.5%;left: 65.5%;width: 4.7%;height: 3.6%;" type="text">
                                     <input required="true" class="abs" name="16" value="<%= @form_fields['16']%>" style="top: 85.5%;left: 71%;width: 12.2%;height: 3.6%;" type="text">
-                                    <input required="true" class="abs" name="17" value="<%= @form_fields['17']%>" style="top: 85.5%;left: 85.5%;width: 13.2%;height: 3.6%;" type="text">
-                                    <input required="true" class="abs" name="17_2" value="<%= @form_fields['17_2']%>" style="top: 89.4%;left: 85.5%;width: 13.2%;height: 3%;" type="text">
+                                    <input required="true" class="abs" name="17" value="<%= @form_fields['17']%>" style="top: 85.5%;left: 85.5%;width: 13.2%;height: 3.6%;" type="number">
+                                    <input required="true" class="abs" name="17_2" value="<%= @form_fields['17_2']%>" style="top: 89.4%;left: 85.5%;width: 13.2%;height: 3%;" type="number">
                                   <!-- fields -->
                                     <button class="btn btn-primary fixed-button" type="submit">Save Form</button>
 
