--- a/app/views/forms/_form1099a.html.erb
+++ b/app/views/forms/_form1099a.html.erb
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
+
 <div class="row">
                           <div class="rel col-lg-12">
                              <div>
@@ -8,7 +10,7 @@ Identification numbers (Federal ID) should contain only numbers.<br/>
 All fields where you enter money amounts should contain only amounts without USD or $ sign.<br/>
 In 'City or town, state or province ...' field you should enter borrower's city then state code then zip code in that order.<br/>
                               </div>
-                             <form id="form1" action="/form/save">
+                             <form id="form1" action="/form/save" >
                         <!-- Label part -->
                           <div id="label-wrapper">
                             <div id="label-container">
@@ -37,18 +39,18 @@ In 'City or town, state or province ...' field you should enter borrower's city 
                                 <div id="fields-container" class="form1099a">
                                    <img width="100%" src="/media/1099a.png" />
 
-                                   <textarea  class="abs" style="top: 14%;left: 1%;width: 45%;height:20%;" name="lenders_name_address"> <%= @form_fields['lenders_name_address']%></textarea>
-                                    <input class="abs" style="top: 39%;left: 1%;width: 22%;height:6%;" name="lenders_fin" value="<%= @form_fields['lenders_fin']%>" type="text">
-                                    <input class="abs" style="top: 39%;left: 24%;width: 22%;height:6%;" name="borrowers_id" value="<%= @form_fields['borrowers_id']%>" type="text">
+                                   <textarea  required="true" class="abs" style="top: 14%;left: 1%;width: 45%;height:20%;" name="lenders_name_address"> <%= @form_fields['lenders_name_address']%></textarea>
+                                    <input required="true" class="abs" style="top: 39%;left: 1%;width: 22%;height:6%;" name="lenders_fin" value="<%= @form_fields['lenders_fin']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the lender. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
+                                    <input required="true" class="abs" style="top: 39%;left: 24%;width: 22%;height:6%;" name="borrowers_id" value="<%= @form_fields['borrowers_id']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the borrower. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
                                     
                                     <input class="abs" style="top: 49%;left: 1%;width: 45%;height:10%;" name="borrowers_name" value="<%= @form_fields['borrowers_name']%>" type="text">
                                     
 <input type="text" readonly class="datepicker abs" name="1" value="<%= @form_fields['1']%>" style="top: 38%;left: 47%;width: 18%;height:6%;">
 
 
-                                    <input class="abs" style="top: 38%;left: 68%;width: 16%;height:6%;" name="2" value="<%= @form_fields['2']%>" type="text">
+                                    <input class="abs" style="top: 38%;left: 68%;width: 16%;height:6%;" name="2" value="<%= @form_fields['2']%>" type="number">
                                     <input class="abs" style="top: 46%;left: 48%;width: 17%;height: 13%;" name="3" value="<%= @form_fields['3']%>" type="text">
-                                    <input class="abs" style="top: 49%;left: 68%;width: 16%;height:10%;" name="4" value="<%= @form_fields['4']%>" type="text">
+                                    <input class="abs" style="top: 49%;left: 68%;width: 16%;height:10%;" name="4" value="<%= @form_fields['4']%>" type="number">
 
                                     <input name="5" value="unchecked" type="hidden">
                                     <input class="abs" style="top: 65%;left: 82.3%;" name="5" <%= @form_fields['5']%> value="checked" type="checkbox">
