--- a/app/views/forms/_form1099b.html.erb
+++ b/app/views/forms/_form1099b.html.erb
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
+
 <div class="row">
                           <div class="rel col-lg-12">
                              <div>
@@ -40,8 +42,8 @@ In 'City or town, state or province ...' field you should enter recipient's city
                                    <!-- fields -->
                                     <textarea required="true" class="abs" style="top: 8%;left: 1%;width: 45%;height: 20%;" name="payers_name_address" ><%= @form_fields['payers_name_address']%></textarea>
                                   
-                                    <input required="true" class="abs" style="top: 32%;left: 1%;width: 24%;height: 9%;" name="payers_fin" value="<%= @form_fields['payers_fin']%>" type="text">
-                                    <input required="true" class="abs" style="top: 32%;left: 26%;width: 20%;height: 9%;" name="recipients_id" value="<%= @form_fields['recipients_id']%>" type="text">
+                                    <input required="true" class="abs" style="top: 32%;left: 1%;width: 24%;height: 9%;" name="payers_fin" value="<%= @form_fields['payers_fin']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the payer. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
+                                    <input required="true" class="abs" style="top: 32%;left: 26%;width: 20%;height: 9%;" name="recipients_id" value="<%= @form_fields['recipients_id']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the recipient. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
                                     <input required="true" class="abs" style="top: 44%;left: 1%;width: 45%;height: 7%;" name="recipients_name" value="<%= @form_fields['recipients_name']%>" type="text">
                                     <input required="true" class="abs" style="top: 54%;left: 1%;width: 45%;height: 6%;" name="street_address" value="<%= @form_fields['street_address']%>" type="text">                                   
                                     <input required="true" class="abs" style="top: 64%;left: 1%;width: 45%;height: 6%;" name="city_town" value="<%= @form_fields['city_town']%>" type="text">
@@ -53,18 +55,18 @@ In 'City or town, state or province ...' field you should enter recipient's city
                             <input class="abs" style="top: 80.3%;left: 43.2%;" name="fatca_fil_req" <%= @form_fields['fatca_fil_req']%> value="checked" type="checkbox">
                                     <input required="true" class="abs" style="top: 86%;left: 1%;width: 14%;height: 3.5%;" name="state_name" value="<%= @form_fields['state_name']%>" type="text">
                                     <input required="true" class="abs" style="top: 86%;left: 16%;width: 14%;" name="state_id_no" value="<%= @form_fields['state_id_no']%>" type="text">
-                                    <input required="true" class="abs" style="top: 86%;left: 32%;width: 14%;height: 3.5%;" name="state_tax_withheld" value="<%= @form_fields['state_tax_withheld']%>" type="text">
-                                    <input required="true" class="abs" style="top: 90.2%;left: 32%;width: 14%;height: 2.6%;" name="state_tax_withheld2" value="<%= @form_fields['state_tax_withheld2']%>" type="text">
+                                    <input required="true" class="abs" style="top: 86%;left: 32%;width: 14%;height: 3.5%;" name="state_tax_withheld" value="<%= @form_fields['state_tax_withheld']%>" type="number">
+                                    <input required="true" class="abs" style="top: 90.2%;left: 32%;width: 14%;height: 2.6%;" name="state_tax_withheld2" value="<%= @form_fields['state_tax_withheld2']%>" type="number">
                                     <input required="true" class="abs" style="top: 6%;left: 47.5%;width: 23%;height: 9%;" name="app_checkbox" value="<%= @form_fields['app_checkbox']%>" type="text">
                                     <input required="true"  class="abs" style="top: 18.7%;left: 47.5%;width: 52%;" name="1a" value="<%= @form_fields['1a']%>" type="text">
                                     
                   <input type="text" required="true" readonly class="datepicker abs" name="1b" value="<%= @form_fields['1b']%>" style="top: 24.7%;left: 47.5%;width: 18%;">
                                     
                   <input type="text" required="true" readonly class="datepicker abs" name="1c" value="<%= @form_fields['1c']%>" style="top: 25%;left: 66.5%;width: 17%;height: 3.1%;" type="text">
-                                    <input required="true" class="abs" name="1d" value="<%= @form_fields['1d']%>" style="top: 31.2%;left: 48.5%;width: 17%;" type="text">
-                                    <input required="true" class="abs" style="top: 31.5%;left: 67.3%;width: 16.9%;height: 3%;" name="1e" value="<%= @form_fields['1e']%>" type="text">
-                                    <input required="true" class="abs" style="top: 38%;left: 48.5%;width: 17%;height: 3%;" name="1f" value="<%= @form_fields['1f']%>" type="text">
-                                    <input required="true" class="abs" style="top: 38%;left: 67.3%;width: 17%;height: 3%;" name="1g" value="<%= @form_fields['1g']%>" type="text">                               
+                                    <input required="true" class="abs" name="1d" value="<%= @form_fields['1d']%>" style="top: 31.2%;left: 48.5%;width: 17%;" type="number">
+                                    <input required="true" class="abs" style="top: 31.5%;left: 67.3%;width: 16.9%;height: 3%;" name="1e" value="<%= @form_fields['1e']%>" type="number">
+                                    <input required="true" class="abs" style="top: 38%;left: 48.5%;width: 17%;height: 3%;" name="1f" value="<%= @form_fields['1f']%>" type="number">
+                                    <input required="true" class="abs" style="top: 38%;left: 67.3%;width: 17%;height: 3%;" name="1g" value="<%= @form_fields['1g']%>" type="number">                               
                             <input name="2_short_term" value="unchecked" type="hidden">
                             <input class="abs" style="top: 41.8%;left: 63.1%;" name="2_short_term" <%= @form_fields['2_short_term']%> value="checked" type="checkbox">
                             <input name="2_long_term" value="unchecked" type="hidden">
@@ -75,7 +77,7 @@ In 'City or town, state or province ...' field you should enter recipient's city
                             <input name="3" value="unchecked" type="hidden">
                             <input class="abs" style="top: 48.2%;left: 81.1%;" name="3" <%= @form_fields['3']%> value="checked" type="checkbox">
 
-                                    <input required="true"  class="abs" style="top: 54%;left: 48.3%;width: 17%;height: 3%;" name="4" value="<%= @form_fields['4']%>" type="text">
+                                    <input required="true"  class="abs" style="top: 54%;left: 48.3%;width: 17%;height: 3%;" name="4" value="<%= @form_fields['4']%>" type="number">
 
                             <input name="5" value="unchecked" type="hidden">
                             <input class="abs" style="top: 54.6%;left: 81.1%;" name="5" <%= @form_fields['5']%> value="checked" type="checkbox">
@@ -88,14 +90,14 @@ In 'City or town, state or province ...' field you should enter recipient's city
                             <input name="7" value="unchecked" type="hidden">
                             <input class="abs" style="top: 64.2%;left: 81.1%;" name="7" <%= @form_fields['7']%> value="checked" type="checkbox">  
 
-                                    <input required="true"  class="abs" style="top: 72%;left: 48.5%;width: 16.5%;height: 4.5%;" name="8" value="<%= @form_fields['8']%>" type="text">                  
-                                    <input required="true"  class="abs" name="9" value="<%= @form_fields['9']%>" style="top: 72%;left: 67.5%;width: 16.5%;height: 4.5%;" type="text">
-                                    <input required="true"  class="abs" name="10" value="<%= @form_fields['10']%>" style="top: 81.5%;left: 48.5%;width: 16.5%;height: 4.5%;" type="text">
-                                    <input required="true"  class="abs" name="11" value="<%= @form_fields['11']%>" style="top: 81.5%;left: 67.5%;width: 16.5%;height: 4.5%;" type="text">
+                                    <input required="true"  class="abs" style="top: 72%;left: 48.5%;width: 16.5%;height: 4.5%;" name="8" value="<%= @form_fields['8']%>" type="number">                  
+                                    <input required="true"  class="abs" name="9" value="<%= @form_fields['9']%>" style="top: 72%;left: 67.5%;width: 16.5%;height: 4.5%;" type="number">
+                                    <input required="true"  class="abs" name="10" value="<%= @form_fields['10']%>" style="top: 81.5%;left: 48.5%;width: 16.5%;height: 4.5%;" type="number">
+                                    <input required="true"  class="abs" name="11" value="<%= @form_fields['11']%>" style="top: 81.5%;left: 67.5%;width: 16.5%;height: 4.5%;" type="number">
 
                             <input name="12" value="unchecked" type="hidden">
                             <input class="abs" style="top: 90%;left: 62.1%;" name="12" <%= @form_fields['12']%> value="checked" type="checkbox">
-                                    <input required="true"  class="abs" name="13" value="<%= @form_fields['13']%>" style="top: 89%;left: 67.5%;width: 16.5%;height: 3.8%;" type="text">
+                                    <input required="true"  class="abs" name="13" value="<%= @form_fields['13']%>" style="top: 89%;left: 67.5%;width: 16.5%;height: 3.8%;" type="number">
                                     
                                   <!-- fields -->
                                     <button class="btn btn-primary fixed-button" type="submit">Save Form</button>
