--- a/app/views/forms/_form1099c.html.erb
+++ b/app/views/forms/_form1099c.html.erb
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
+
 <div class="row">
                           <div class="rel col-lg-12">
                              <div>
@@ -38,8 +40,8 @@ In 'City or town, state or province ...' field you should enter debtor's city th
 
                                     <!-- fields -->
                                    <textarea required="true"  class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 21%;" name="creditors_name_address"><%= @form_fields['creditors_name_address']%></textarea>
-                                    <input required="true"  class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="creditors_fin" value="<%= @form_fields['creditors_fin']%>" type="text">
-                                    <input required="true"  class="abs" name="debtors_id" value="<%= @form_fields['debtors_id']%>" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text">
+                                    <input required="true"  class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="creditors_fin" value="<%= @form_fields['creditors_fin']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the creditor. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
+                                    <input required="true"  class="abs" name="debtors_id" value="<%= @form_fields['debtors_id']%>" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the debtor. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
                                     <input required="true" class="abs" name="debtors_name" value="<%= @form_fields['debtors_name']%>" style="top: 48.5%;left: 1.5%;width: 44.5%;height: 9%;" type="text">
                                     <input required="true" class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 63%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
                                     <input required="true" class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 73.5%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
@@ -47,8 +49,8 @@ In 'City or town, state or province ...' field you should enter debtor's city th
                                    
                     <input type="text" required="true" readonly class="datepicker abs" name="1" value="<%= @form_fields['1']%>" style="top: 9%;left: 47%;width: 18%;height: 5%;">
 
-                                    <input required="true" class="abs" style="top: 19%;left: 48.5%;width: 16.5%;height: 5%;" name="2" value="<%= @form_fields['2']%>" type="text">
-                                    <input required="true" class="abs" style="top: 29%;left: 48.5%;width: 16.5%;height: 5%;" name="3" value="<%= @form_fields['3']%>" type="text">
+                                    <input required="true" class="abs" style="top: 19%;left: 48.5%;width: 16.5%;height: 5%;" name="2" value="<%= @form_fields['2']%>" type="number">
+                                    <input required="true" class="abs" style="top: 29%;left: 48.5%;width: 16.5%;height: 5%;" name="3" value="<%= @form_fields['3']%>" type="number">
                                     <input required="true" class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 39%;left: 47.5%;width: 36.5%;height: 19%;" type="text">
 
                                   
@@ -56,7 +58,7 @@ In 'City or town, state or province ...' field you should enter debtor's city th
                                     <input class="abs" style="top: 62%;left: 81.8%;" name="5" <%= @form_fields['5']%> value="checked" type="checkbox">
 
                                     <input required="true" class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 83%;left: 47.5%;width: 17.5%;height: 5%;" type="text">
-                                    <input required="true" class="abs" name="7" value="<%= @form_fields['7']%>" style="top: 83%;left: 67.5%;width: 16.5%;height: 5%;" type="text">
+                                    <input required="true" class="abs" name="7" value="<%= @form_fields['7']%>" style="top: 83%;left: 67.5%;width: 16.5%;height: 5%;" type="number">
                                     
                                   <button class="btn btn-primary fixed-button" type="submit">Save Form</button>
 
