--- a/app/views/forms/_form1099cap.html.erb
+++ b/app/views/forms/_form1099cap.html.erb
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
+
 <div class="row">
                           <div class="rel col-lg-12">
                              <div>
@@ -36,15 +38,15 @@ In 'City or town, state or province ...' field you should enter shareholder's ci
                                    <img width="100%" src="/media/1099cap.png" />
                                     <!-- fields -->
                                     <textarea required="true" class="abs" style="top: 14%;left: 2%;width: 44%;height: 19%;" name="corporations_name_address"><%= @form_fields['corporations_name_address']%></textarea>
-                                    <input required="true" class="abs" style="top: 39%;left: 2%;width: 21%;height: 5%;" name="corporations_fin" value="<%= @form_fields['corporations_fin']%>" type="text">
-                                    <input required="true" class="abs" style="top: 39%;left: 25%;width: 21%;height: 5%;" name="shareholders_id" value="<%= @form_fields['shareholders_id']%>" type="text">
+                                    <input required="true" class="abs" style="top: 39%;left: 2%;width: 21%;height: 5%;" name="corporations_fin" value="<%= @form_fields['corporations_fin']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the corporation. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
+                                    <input required="true" class="abs" style="top: 39%;left: 25%;width: 21%;height: 5%;" name="shareholders_id" value="<%= @form_fields['shareholders_id']%>" type="text" data-toggle="tooltip" title="Enter the valid nine-digit taxpayer identification number assigned to the shareholders. Do not enter blanks, hyphens, or alpha characters. Filling the field with all zeros, ones, twos, etc., will result in an incorrect data" pattern="\d{9}">
                                     <input required="true" class="abs" style="top: 49%;left: 2%;width: 44%;height: 9%;" name="shareholders_name" value="<%= @form_fields['shareholders_name']%>" type="text">
                                     <input required="true" class="abs" style="top: 63%;left: 2%;width: 44%;height: 5%;" name="street_address" value="<%= @form_fields['street_address']%>" type="text">
                                     <input required="true" class="abs" style="top: 72.5%;left: 2%;width: 44%;height: 5%;" name="city_or_town" value="<%= @form_fields['city_or_town']%>" type="text">
                                     <input required="true" class="abs" style="top: 82%;left: 2%;width: 44%;height: 5%;" name="account_number" value="<%= @form_fields['account_number']%>" type="text">
                                     
                 <input type="text" required="true" readonly class="datepicker abs" name="1" value="<%= @form_fields['1']%>" style="top: 10%;left: 48%;width: 17%;height: 5%;">
-                                    <input required="true" class="abs" style="top: 20%;left: 49%;width: 16%;height: 5%;" name="2" value="<%= @form_fields['2']%>" type="text">
+                                    <input required="true" class="abs" style="top: 20%;left: 49%;width: 16%;height: 5%;" name="2" value="<%= @form_fields['2']%>" type="number">
                                     <input required="true" class="abs" style="top: 29%;left: 47%;width: 18%;height: 5%;" name="3" value="<%= @form_fields['3']%>" type="text">
                                   
                 <input type="text" required="true" readonly class="datepicker abs" name="4" value="<%= @form_fields['4']%>" style="top: 29%;left: 66%;width: 18%;height: 5%;">
