1099misc added for export

--- a/app/views/forms/_form1099int.html.erb
+++ b/app/views/forms/_form1099int.html.erb
@@ -64,18 +64,20 @@ In 'City or town, state or province ...' field you should enter recipient's city
                                     <input required="true" class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 46.5%;left: 48%;width: 16.5%;height: 3%;" type="number">
                                     <input required="true" class="abs" name="5" value="<%= @form_fields['5']%>" style="top: 46.5%;left: 67%;width: 16.5%;height: 3%;" type="number">
                                     <input required="true" class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 52.5%;left: 48%;width: 16.7%;height: 3.3%;" type="number">
-                                    <input required="true" class="abs" name="7" value="<%= @form_fields['7']%>" style="top: 52.5%;left: 66%;width: 17.3%;height: 3.4%;" type="text">
+                                    <input required="false" class="abs" name="7" value="<%= @form_fields['7']%>" style="top: 52.5%;left: 66%;width: 17.3%;height: 3.4%;" type="text">
                                     <input required="true" class="abs" name="8" value="<%= @form_fields['8']%>" style="top: 59.5%;left: 48%;width: 16.7%;height: 6.4%;" type="number">
                                     <input required="true" class="abs" name="9" value="<%= @form_fields['9']%>" style="top: 59.5%;left: 67%;width: 16.7%;height: 6.4%;" type="number">
                                     <input required="true" class="abs" name="10" value="<%= @form_fields['10']%>" style="top: 69.5%;left: 48%;width: 16.7%;height: 6.4%;" type="number">
                                     <input required="true" class="abs" name="11" value="<%= @form_fields['11']%>" style="top: 69.5%;left: 66.7%;width: 16.7%;height: 6.4%;" type="number">
                                     <input required="true" class="abs" name="12" value="<%= @form_fields['12']%>" style="top: 79%;left: 48%;width: 16.7%;height: 3.5%;" type="number">
                                     <input required="true" class="abs" name="13" value="<%= @form_fields['13']%>" style="top: 79%;left: 66.6%;width: 16.7%;height: 3.5%;" type="number">
-                                    <input required="true" class="abs" name="14" value="<%= @form_fields['14']%>" style="top: 87.5%;left: 47%;width: 17.7%;height: 4.2%;" type="text">
+                                    <input required="false" class="abs" name="14" value="<%= @form_fields['14']%>" style="top: 87.5%;left: 47%;width: 17.7%;height: 4.2%;" type="text">
+                            <!--
                                     <input required="true" class="abs" name="15" value="<%= @form_fields['15']%>" style="top: 85.5%;left: 65.5%;width: 4.7%;height: 3.6%;" type="text">
                                     <input required="true" class="abs" name="16" value="<%= @form_fields['16']%>" style="top: 85.5%;left: 71%;width: 12.2%;height: 3.6%;" type="text">
                                     <input required="true" class="abs" name="17" value="<%= @form_fields['17']%>" style="top: 85.5%;left: 85.5%;width: 13.2%;height: 3.6%;" type="number">
                                     <input required="true" class="abs" name="17_2" value="<%= @form_fields['17_2']%>" style="top: 89.4%;left: 85.5%;width: 13.2%;height: 3%;" type="number">
+                              -->
                                   <!-- fields -->
                                     <button class="btn btn-primary fixed-button" type="submit">Save Form</button>
 
