--- a/app/views/forms/_form1099misc.html.erb
+++ b/app/views/forms/_form1099misc.html.erb
@@ -63,19 +63,23 @@ In 'City or town, state or province ...' field you should enter recipient's city
                       <input class="abs" style="top:63%;left:62.8%;" name="9" <%= @form_fields['9']%> value="checked" type="checkbox">
 
                                     <input required="true" class="abs" name="10" value="<%= @form_fields['10']%>" style="top: 59%;left: 67%;width: 15%;height: 7%;" type="number">
+                                  <!--
                                     <input required="true" class="abs" name="11" value="<%= @form_fields['11']%>" style="top: 67%;left: 48.5%;width: 15%;height: 6%;" type="text">
                                     <input required="true" class="abs" name="12" value="<%= @form_fields['12']%>" style="top: 67%;left: 67%;width: 15%;height: 6%;" type="text">
-
+-->
 
                                     <input required="true" class="abs" name="13" value="<%= @form_fields['13']%>" style="top: 78%;left: 48.5%;width: 15.5%;height: 4.5%;" type="number">
                                     <input required="true" class="abs" name="14" value="<%= @form_fields['14']%>" style="top: 78%;left: 67.5%;width: 15.5%;height: 4.5%;" type="number">
                                     <input required="true" class="abs" name="15a" value="<%= @form_fields['15a']%>" style="top: 85.5%;left: 3.5%;width: 19.5%;height: 6.5%;" type="number">
                                     <input required="true" class="abs" name="15b" value="<%= @form_fields['15b']%>" style="top: 85.5%;left: 26%;width: 19.5%;height: 6.5%;" type="number">
+<!--
                                     <input required="false" class="abs" style="top: 85.5%;left: 48.5%;width: 16%;" name="16" value="<%= @form_fields['16']%>" type="text">
                                     <input required="false" class="abs" name="16_2" value="<%= @form_fields['16_2']%>" style="top: 89.4%;left: 48.5%;width: 16%;height: 3%;" type="number">
                                     <input required="false" class="abs" name="17" value="<%= @form_fields['17']%>" style="top: 85.5%;left: 65.5%;width: 17.5%;" type="number">
-                                    <input required="false" class="abs" name="18" value="<%= @form_fields['18']%>" style="top: 85.5%;left: 85.5%;width: 13.5%;height: 3.5%;" type="number"> 
+                                    <input required="false" class="abs" name="18" value="<%= @form_fields['18']%>" 
+                                    style="top: 85.5%;left: 85.5%;width: 13.5%;height: 3.5%;" type="number"> 
                                     <input required="false" class="abs" name="18_2" value="" style="top: 90%;left: 85.5%;width: 13.5%;height: 2.5%;" type="number">
+                      -->
                                     <button class="btn btn-primary fixed-button" type="submit">Save Form</button>
 
 
